@@ -75,6 +75,7 @@ Release 0.20.0 - Unreleased
                names in links (Lars George via Stack)
    HBASE-1310  Off by one error in Bytes.vintToBytes
    HBASE-1202  getRow does not always work when specifying number of versions
+   HBASE-1324  hbase-1234 broke testget2 unit test (and broke the build)
 
   IMPROVEMENTS
    HBASE-1089  Add count of regions on filesystem to master UI; add percentage
